--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
+amqp==2.6.0
+billiard==3.6.3.0
+celery==4.4.6
+configparser==4.0.2
+contextlib2==0.6.0.post1
 Django==1.11.29
+django-redis==4.10.0
 django-tinymce==3.0.2
+django-tinymce4-lite==1.8.0
+future==0.18.2
+importlib-metadata==1.7.0
+itsdangerous==1.1.0
+jsmin==2.2.2
+kombu==4.6.11
+pathlib2==2.3.5
 Pillow==6.2.2
 pytz==2020.1
+redis==3.5.3
+scandir==1.10.0
+six==1.15.0
+vine==1.3.0
+zipp==1.2.0
